--- a/templates/timer.html
+++ b/templates/timer.html
@@ -1,23 +1,28 @@
+<!-- templates/timer.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Timer</title>
-    <script>
-        var remainingTime = parseInt("{{ remaining_time }}", 10); // Ensure it's an integer
-        function countdown() {
-            if (remainingTime > 0) {
-                document.getElementById('timer').innerText = remainingTime + ' seconds remaining';
-                remainingTime--;
-                setTimeout(countdown, 1000);
-            } else {
-                document.getElementById('timer').innerText = 'Time is UP!';
-            }
-        }
-        window.onload = countdown;
-    </script>
+  <meta charset="UTF-8">
+  <title>Countdown Timer</title>
+  <!-- If you have a global CSS, link it here
+       <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  -->
 </head>
 <body>
-    <p><b>TIME REMAINS:</b></p>
-    <p id="timer"></p>
+  <p><strong>TIME REMAINS:</strong></p>
+  <script>
+    // These variables mirror your PHP echoes:
+    var RemainingTime = Number({{ remaining_time }});
+    var BackColor = "white";
+    var ForeColor = "navy";
+    var CountActive = true;
+    var CountStepper = -1;
+    var LeadingZero = true;
+    var DisplayFormat = "%%M%% Minutes, %%S%% Seconds.";
+    var FinishMessage = "Time is UP!";
+    var RedirectPage = "{{ redirect_page }}";
+  </script>
+  <!-- Countdown script goes here. Place countdown.js in /static/js -->
+  <script src="{{ url_for('static', filename='js/countdown.js') }}"></script>
 </body>
 </html>
