--- a/templates/prac_c2.html
+++ b/templates/prac_c2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Task C1</title>
+  <title>Practice C2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
@@ -14,27 +14,29 @@
 
   <div class="b_down">
     <div class="article">
-      <div id="c1" style="text-align:center;">
+      <div id="c2" name="c2" style="text-align:center;">
         <br>
-        <div id="passQ" class="passQ">
-          <p><b>1. How easy was this article to read?</b></p>
+        <div id="passQ" name="passQ" class="passQ">
+          <b>
+            2. Including the other articles that you have read today,
+            how much new information was in this article?
+          </b>
           <br><br>
 
-          <!-- The form posts to /task_c2?fid={{ fid }} in Flask -->
-          <form id="form_c1"
-                name="form_c1"
-                action="{{ url_for('task_c2', fid=fid) }}"
+          <!-- The form posts to prac_c3.php?fid=... -->
+          <form id="form_c2"
+                name="form_c2"
+                action="{{ url_for('prac_c2', fid=fid) }}"
                 method="POST"
                 onsubmit="return saveAns();">
-
+                <input type="hidden" name="qid" value="c2">
             <table>
               <tr>
                 <td colspan="2" style="text-align:center;">
                   <input type="range"
                          name="ans_range"
                          id="ans_range"
-                         min="0"
-                         max="100"
+                         min="0" max="100"
                          onchange="printValue()" />
                 </td>
                 <td>
@@ -51,27 +53,27 @@
                 <td></td>
               </tr>
               <tr>
-                <td style="text-align:left;">Very<br>Difficult</td>
-                <td style="text-align:right;">Very<br>Easy</td>
+                <td style="text-align:left;">No New<br>Information</td>
+                <td style="text-align:right;">Completely<br>New Information</td>
                 <td></td>
               </tr>
             </table>
 
+            <!-- hidden input for fid -->
+            <input type="hidden" name="fid" value="{{ fid }}" />
             <br>
-            <input type="hidden" name="fid" value="{{ fid }}">
             <input type="image"
                    name="submit"
                    id="submit"
                    src="{{ url_for('static', filename='images/next_button.gif') }}"
-                   alt="Next">
-                   <input type="hidden" name="qid" value="c1">
+                   alt="Next" />
           </form>
         </div>
       </div>
     </div>
   </div>
 
-  <script>
+  <script type="text/javascript">
     function printValue() {
       var x = document.getElementById('ans_range');
       var y = document.getElementById('ans');
@@ -80,10 +82,11 @@
 
     function saveAns() {
       var input = document.getElementById('ans');
-      if (!input.value) {
+      if (input.value === '') {
         return false;
-      } 
-      return true;
+      } else {
+        return true;
+      }
     }
   </script>
 </body>
