--- a/templates/prac_k2.html
+++ b/templates/prac_k2.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Practice Knowledge Check</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Practice K2</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
-    <br><br>
-    <div id="k1" name="k2" style="text-align:center">
-        <div id="passQ" name="passQ" class="passQ">
-            <p>Now, please tell us about what you have learned today about <b>{{ topic_title }}</b>.</p>
-            <p>You can either make a list of facts or write a paragraph, but try to be as specific as you can and tell us as much as you can about {{ trim_subtop }}.</p>
-            <br>
-            <form id="form_k2" name="form_k2" action="{{ url_for(action) }}" method="POST" onsubmit="return saveAns();">
-                <textarea id="textarea_k2" name="textarea_k2" rows="10" cols="60" required></textarea>
-                <br><br>
-                <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next" />
-            </form>
-        </div>
-    </div>
+  <br><br>
+  <div id="k2" style="text-align:center;">
+    <div class="passQ">
+      <p>
+        Now, please tell us about what you have learned today about
+        <b>{{ topicTitle }}</b>.
+      </p>
+      <p>
+        You can either make a list of facts or write a paragraph,
+        but try to be as specific as you can and tell us as much
+        as you can about {{ subtopString }}.
+      </p>
 
-    <!-- JavaScript for handling form submission -->
-    <script type="text/javascript">
-        function saveAns() {
-            var input = document.getElementById('textarea_k2');
-            if (input.value == '') {
-                return false;
-            } else {
-                // Optionally, you can send the answer to the server using AJAX
-                // jQuery.post('saveTopicAnswer', {ans: input.value, qid: "prac_k2"});
-                return true;
-            }
-        }
-    </script>
+      <!-- The form now posts to /instruction instead of instruction.php -->
+      <form id="form_k2" name="form_k2"
+            action="{{ url_for('final_instruction') }}"
+            method="POST"
+            onsubmit="return saveAns();">
+        <textarea id="textarea_k2" name="textarea_k2"
+                  rows="10" cols="60" required></textarea>
+        <br><br>
+        <input type="image" name="submit" id="submit"
+               src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next" />
+      </form>
+    </div>
+  </div>
+
+  <script>
+    function saveAns() {
+      var input = document.getElementById('textarea_k2');
+      if (input.value === '') {
+        return false;
+      } else {
+        // If you want an AJAX post:
+        // jQuery.post('/saveTopicAnswer', { ans: input.value, qid: "prac_k2" });
+        return true;
+      }
+    }
+  </script>
 </body>
 </html>
