--- a/templates/task_c2.html
+++ b/templates/task_c2.html
@@ -2,28 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Task C1</title>
+  <title>Task C2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
   <div class="b_up">
     <div class="task_c_up">
-      Please make rating from 0 to 100 by moving the circle on the scale.
+      Please make a rating from 0 to 100 by moving the circle on the scale.
     </div>
   </div>
 
   <div class="b_down">
     <div class="article">
-      <div id="c1" style="text-align:center;">
+      <div id="c2" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>1. How easy was this article to read?</b></p>
+          <p><b>
+            2. Including the other articles that you have read today, 
+            how much new information was in this article?
+          </b></p>
           <br><br>
 
-          <!-- The form posts to /task_c2?fid={{ fid }} in Flask -->
-          <form id="form_c1"
-                name="form_c1"
-                action="{{ url_for('task_c2', fid=fid) }}"
+          <!-- The form posts to /task_c3?fid={{ fid }} in Flask -->
+          <form id="form_c2"
+                name="form_c2"
+                action="{{ url_for('task_c3', fid=fid) }}"
                 method="POST"
                 onsubmit="return saveAns();">
 
@@ -31,10 +34,8 @@
               <tr>
                 <td colspan="2" style="text-align:center;">
                   <input type="range"
-                         name="ans_range"
-                         id="ans_range"
-                         min="0"
-                         max="100"
+                         name="ans_range" id="ans_range"
+                         min="0" max="100"
                          onchange="printValue()" />
                 </td>
                 <td>
@@ -51,27 +52,27 @@
                 <td></td>
               </tr>
               <tr>
-                <td style="text-align:left;">Very<br>Difficult</td>
-                <td style="text-align:right;">Very<br>Easy</td>
+                <td style="text-align:left;">No New<br>Information</td>
+                <td style="text-align:right;">Completely<br>New Information</td>
                 <td></td>
               </tr>
             </table>
 
-            <br>
             <input type="hidden" name="fid" value="{{ fid }}">
+            <br>
             <input type="image"
                    name="submit"
                    id="submit"
                    src="{{ url_for('static', filename='images/next_button.gif') }}"
                    alt="Next">
-                   <input type="hidden" name="qid" value="c1">
+                   <input type="hidden" name="qid" value="c2">
           </form>
         </div>
       </div>
     </div>
   </div>
 
-  <script>
+  <script type="text/javascript">
     function printValue() {
       var x = document.getElementById('ans_range');
       var y = document.getElementById('ans');
@@ -82,7 +83,7 @@
       var input = document.getElementById('ans');
       if (!input.value) {
         return false;
-      } 
+      }
       return true;
     }
   </script>
