--- a/templates/task_c3.html
+++ b/templates/task_c3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Task C1</title>
+  <title>Task C3</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
@@ -14,27 +14,24 @@
 
   <div class="b_down">
     <div class="article">
-      <div id="c1" style="text-align:center;">
+      <div id="c3" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>1. How easy was this article to read?</b></p>
+          <p><b>3. How much did you learn from this particular article?</b></p>
           <br><br>
 
-          <!-- The form posts to /task_c2?fid={{ fid }} in Flask -->
-          <form id="form_c1"
-                name="form_c1"
-                action="{{ url_for('task_c2', fid=fid) }}"
+          <form id="form_c3"
+                name="form_c3"
+                action="{{ action_url }}"
                 method="POST"
                 onsubmit="return saveAns();">
-
             <table>
               <tr>
                 <td colspan="2" style="text-align:center;">
                   <input type="range"
                          name="ans_range"
                          id="ans_range"
-                         min="0"
-                         max="100"
+                         min="0" max="100"
                          onchange="printValue()" />
                 </td>
                 <td>
@@ -51,27 +48,29 @@
                 <td></td>
               </tr>
               <tr>
-                <td style="text-align:left;">Very<br>Difficult</td>
-                <td style="text-align:right;">Very<br>Easy</td>
+                <td style="text-align:left;">
+                  Didn’t Learn<br>Anything at All
+                </td>
+                <td style="text-align:right;">
+                  Learned a Lot
+                </td>
                 <td></td>
               </tr>
             </table>
 
-            <br>
+            <!-- hidden fields -->
             <input type="hidden" name="fid" value="{{ fid }}">
-            <input type="image"
-                   name="submit"
-                   id="submit"
-                   src="{{ url_for('static', filename='images/next_button.gif') }}"
-                   alt="Next">
-                   <input type="hidden" name="qid" value="c1">
+            <input type="hidden" name="savepassid" value="{{ passID }}">
+            <br>
+            <input type="image" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next">
+            <input type="hidden" name="qid" value="c3">
           </form>
         </div>
       </div>
     </div>
   </div>
 
-  <script>
+  <script type="text/javascript">
     function printValue() {
       var x = document.getElementById('ans_range');
       var y = document.getElementById('ans');
@@ -80,9 +79,9 @@
 
     function saveAns() {
       var input = document.getElementById('ans');
-      if (!input.value) {
+      if (input.value === '') {
         return false;
-      } 
+      }
       return true;
     }
   </script>
