--- a/templates/let_comp_two.html
+++ b/templates/let_comp_two.html
@@ -96,7 +96,7 @@
         </tr>
       </table>
       <br>
-      <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/done_button.gif') }} alt="Done">
+      <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/done_button.gif') }}" alt="Done">
     </form>
   </div>
 
