--- a/templates/prac_c1.html
+++ b/templates/prac_c1.html
@@ -23,7 +23,7 @@
           <!-- The form posts to /task_c2?fid={{ fid }} in Flask -->
           <form id="form_c1"
                 name="form_c1"
-                action="{{ url_for('task_c2', fid=fid) }}"
+                action="{{ url_for('prac_c1', fid=fid) }}"
                 method="POST"
                 onsubmit="return saveAns();">
 
