--- a/templates/prac_k2.html
+++ b/templates/prac_k2.html
@@ -21,7 +21,7 @@
 
       <!-- The form now posts to /instruction instead of instruction.php -->
       <form id="form_k2" name="form_k2"
-            action="{{ url_for('final_instruction') }}"
+            action="{{ url_for('instruction') }}"
             method="POST"
             onsubmit="return saveAns();">
         <textarea id="textarea_k2" name="textarea_k2"
