--- a/templates/prac_instruction.html
+++ b/templates/prac_instruction.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Prac Instruction</title>
+  <style>
+    input[type="range"] {
+      width: 100vw; /* Or use 100% if you want it to fill the container */
+    }
+  </style>
 </head>
 <body>
   <div class='cl2'>
@@ -36,7 +41,7 @@
     <tr>
       <td text-align='center'>
         <form id='form_c1' name='form_c1'> 		
-           <table>
+           <tabl style="width: 100%;">
              <tr>
                <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
              </tr>
@@ -60,7 +65,7 @@
     <tr>
       <td text-align='center'>
         <form id='form_c2' name='form_c2'> 		
-           <table>
+           <table style="width: 100%;">
              <tr>
                <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
              </tr>
@@ -84,7 +89,7 @@
     <tr>
       <td text-align='center'>
         <form id='form_c3' name='form_c3'> 		
-           <table>
+           <table style="width: 100%;">
              <tr>
                <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
             </tr>
@@ -93,7 +98,7 @@
                <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
              </tr>
              <tr>
-               <td text-align='left' style='font-size:16pt; color:#0B3861;'>Didn’t Learn </br>Anything at All</td>
+               <td text-align='left' style='font-size:16pt; color:#0B3861;'>Didn't Learn </br>Anything at All</td>
                <td text-align='right' style='font-size:16pt; color:#0B3861;'>Learned a Lot</td>
              </tr> 				
            </table> 		
