--- a/templates/instruction.html
+++ b/templates/instruction.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Instruction</title>
+  <style>
+    input[type="range"] {
+      width: 100vw; /* Or use 100% if you want it to fill the container */
+    }
+  </style>
 </head>
 <body>
     <div class='cl2'>
@@ -35,22 +40,22 @@
                 </tr>
                 <tr>
                     <td text-align='center'>
-                        <form id='form_c1' name='form_c1'>
-                            <table>
-                                <tr>
-                                    <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100' /></td>
-                                </tr>
-                                <tr>
-                                    <td text-align='left' style='font-size:16pt; color:#0B3861;'><b>0</b></td>
-                                    <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
-                                </tr>
-                                <tr>
-                                    <td text-align='left' style='font-size:16pt; color:#0B3861;'>Very </br>Difficult</td>
-                                    <td text-align='right' style='font-size:16pt; color:#0B3861;'>Very</br> Easy</td>
-                                </tr>
-                            </table>
+                        <form id='form_c1' name='form_c1'> 		
+                           <tabl style="width: 100%;">
+                             <tr>
+                               <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
+                             </tr>
+                             <tr>
+                               <td text-align='left' style='font-size:16pt; color:#0B3861;'><b>0</b></td>
+                               <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
+                             </tr>
+                             <tr>
+                               <td text-align='left'  style='font-size:16pt; color:#0B3861;'>Very </br>Difficult</td>
+                               <td text-align='right'  style='font-size:16pt; color:#0B3861;'>Very</br> Easy</td>
+                             </tr> 				
+                           </table> 		
                         </form>
-                    </td>
+                      </td>
                 </tr>
                 <tr>
                     <td text-align='left' style='font-size:16pt; color:#0B3861;'>
@@ -59,22 +64,22 @@
                 </tr>
                 <tr>
                     <td text-align='center'>
-                        <form id='form_c2' name='form_c2'>
-                            <table>
-                                <tr>
-                                    <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100' /></td>
-                                </tr>
-                                <tr>
-                                    <td text-align='left' style='font-size:16pt; color:#0B3861;'><b>0</b></td>
-                                    <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
-                                </tr>
-                                <tr>
-                                    <td text-align='left' style='font-size:16pt; color:#0B3861;'>No New </br>Information</td>
-                                    <td text-align='right' style='font-size:16pt; color:#0B3861;'>Completely</br> New Information</td>
-                                </tr>
-                            </table>
+                        <form id='form_c2' name='form_c2'> 		
+                           <table style="width: 100%;">
+                             <tr>
+                               <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
+                             </tr>
+                             <tr>
+                               <td text-align='left' style='font-size:16pt; color:#0B3861;'><b>0</b></td>
+                               <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
+                             </tr>
+                             <tr>
+                               <td text-align='left' style='font-size:16pt; color:#0B3861;'>No New </br>Information</td>
+                               <td text-align='right' style='font-size:16pt; color:#0B3861;'>Completely</br> New Information</td>
+                             </tr> 				
+                           </table> 		
                         </form>
-                    </td>
+                      </td>
                 </tr>
                 <tr>
                     <td text-align='left' style='font-size:16pt; color:#0B3861;'>
@@ -83,22 +88,22 @@
                 </tr>
                 <tr>
                     <td text-align='center'>
-                        <form id='form_c3' name='form_c3'>
-                            <table>
-                                <tr>
-                                    <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100' /></td>
-                                </tr>
-                                <tr>
-                                    <td text-align='left' style='font-size:16pt; color:#0B3861;'><b>0</b></td>
-                                    <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
-                                </tr>
-                                <tr>
-                                    <td text-align='left' style='font-size:16pt; color:#0B3861;'>Didn’t Learn </br>Anything at All</td>
-                                    <td text-align='right' style='font-size:16pt; color:#0B3861;'>Learned a Lot</td>
-                                </tr>
-                            </table>
+                        <form id='form_c3' name='form_c3'> 		
+                           <table style="width: 100%;">
+                             <tr>
+                               <td colspan='2' text-align='center'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
+                            </tr>
+                             <tr>
+                               <td text-align='left' style='font-size:16pt; color:#0B3861;'><b>0</b></td>
+                               <td text-align='right' style='font-size:16pt; color:#0B3861;'><b>100</b></td>
+                             </tr>
+                             <tr>
+                               <td text-align='left' style='font-size:16pt; color:#0B3861;'>Didn't Learn </br>Anything at All</td>
+                               <td text-align='right' style='font-size:16pt; color:#0B3861;'>Learned a Lot</td>
+                             </tr> 				
+                           </table> 		
                         </form>
-                    </td>
+                      </td>
                 </tr>
             </table>
         </div>
