--- a/templates/let_comp_two.html
+++ b/templates/let_comp_two.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Start Letter Comparison Two</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <style>
+    table { width: 100%; }
+    td { padding: 8px; }
+  </style>
 </head>
 <body>
   <div>
