--- a/templates/prac_c1.html
+++ b/templates/prac_c1.html
@@ -27,35 +27,44 @@
                 method="POST"
                 onsubmit="return saveAns();">
 
-            <table>
-              <tr>
-                <td colspan="2" style="text-align:center;">
-                  <input type="range"
-                         name="ans_range"
-                         id="ans_range"
-                         min="0"
-                         max="100"
-                         onchange="printValue()" />
-                </td>
-                <td>
-                  <input type="text"
-                         name="ans"
-                         id="ans"
-                         readonly="readonly"
-                         class="readonly" />
-                </td>
-              </tr>
-              <tr>
-                <td style="text-align:left;"><b>0</b></td>
-                <td style="text-align:right;"><b>100</b></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td style="text-align:left;">Very<br>Difficult</td>
-                <td style="text-align:right;">Very<br>Easy</td>
-                <td></td>
-              </tr>
-            </table>
+                <table style="width:100%;">
+                  <!-- Textbox row (full width) -->
+                  <tr>
+                    <td colspan="2" style="text-align:center;">
+                      <input type="text"
+                             name="ans"
+                             id="ans"
+                             readonly="readonly"
+                             class="readonly" />
+                    </td>
+                  </tr>
+                  
+                  <!-- Slider row (full width) -->
+                  <tr>
+                    <td colspan="2" style="text-align:center;">
+                      <input type="range"
+                             name="ans_range"
+                             id="ans_range"
+                             min="0"
+                             max="100"
+                             style="width:100%;"
+                             onchange="printValue()" />
+                    </td>
+                  </tr>
+                  
+                  <!-- Scale labels with descriptions in two side-by-side cells -->
+                  <tr>
+                    <td style="text-align:left; vertical-align:top;">
+                      <b>0</b><br>
+                      Didn’t Learn<br>Anything at All
+                    </td>
+                    <td style="text-align:right; vertical-align:top;">
+                      <b>100</b><br>
+                      Learned a Lot
+                    </td>
+                  </tr>
+                </table>
+                
 
             <br>
             <input type="hidden" name="fid" value="{{ fid }}">
