--- a/templates/task_a.html
+++ b/templates/task_a.html
@@ -40,14 +40,19 @@
         {% set subtop_title = row[2] %}
 
         {% if subtop_id in visited_subtop %}
-          <td class="cl6"><font>{{ subtop_title }}</font></td>
-        {% else %}
-          <!-- Link to /task_b?subtop=XYZ&passOrd=1&lastPage=a -->
-          <td class="cl5">
-            <a href="{{ url_for('task_b', subtop=subtop_id, passOrd=1, lastPage='a') }}"
-               style="text-decoration:underline;">
+          <!-- Already visited -->
+          <td class="cl6">
+            <div style="width: 100%; border: 1px solid #ccc; padding: 10px; background-color: #f5f5f5; font-size: 16pt; color: #0B3861; border-radius: 4px;">
               {{ subtop_title }}
-            </a>
+            </div>
+          </td>
+        {% else %}
+          <!-- Not visited yet => display as a clickable text box -->
+          <td class="cl5">
+            <div style="width: 100%; border: 1px solid #007BFF; padding: 10px; background-color: #e9f5ff; font-size: 16pt; color: #0B3861; border-radius: 4px; cursor: pointer;"
+                onclick="window.location.href='{{ url_for('task_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
+              {{ subtop_title }}
+            </div>
           </td>
         {% endif %}
 
