--- a/templates/task_c4.html
+++ b/templates/task_c4.html
@@ -18,26 +18,44 @@
         <br>
         <div id="passQ" class="passQ">
           <p><b>4. How much do you learn about Donation and Medical Transplants?</b></p>
+          <p>{{action_url}}</p>
           <br><br>
           <form id="form_c4" name="form_c4" action="{{ action_url }}" method="POST" onsubmit="return saveAns();">
-            <table>
+            <table style="width:100%;">
+              <!-- Textbox row (full width) -->
               <tr>
                 <td colspan="2" style="text-align:center;">
-                  <input type="range" name="ans_range" id="ans_range" min="0" max="100" onchange="printValue()"/>
-                </td>
-                <td>
-                  <input type="text" name="ans" id="ans" readonly="readonly" class="readonly"/>
+                  <input type="text"
+                         name="ans"
+                         id="ans"
+                         readonly="readonly"
+                         class="readonly" />
                 </td>
               </tr>
+              
+              <!-- Slider row (full width) -->
               <tr>
-                <td style="text-align:left;"><b>0</b></td>
-                <td style="text-align:right;"><b>100</b></td>
-                <td></td>
+                <td colspan="2" style="text-align:center;">
+                  <input type="range"
+                         name="ans_range"
+                         id="ans_range"
+                         min="0"
+                         max="100"
+                         style="width:100%;"
+                         onchange="printValue()" />
+                </td>
               </tr>
+              
+              <!-- Scale labels with descriptions in two side-by-side cells -->
               <tr>
-                <td style="text-align:left;">No at all</td>
-                <td style="text-align:right;">An Overwhelming<br>Amount</td>
-                <td></td>
+                <td style="text-align:left; vertical-align:top;">
+                  <b>0</b><br>
+                  Didn’t Learn<br>Anything at All
+                </td>
+                <td style="text-align:right; vertical-align:top;">
+                  <b>100</b><br>
+                  Learned a Lot
+                </td>
               </tr>
             </table>
             <input type="hidden" name="fid" value="{{ fid }}"/>
